# btrfs-dedupe

./: Cargo.toml  LICENSE  README.md  build.rs
etc/: build-binary-release  project-data
scripts/: build-release
src/: arguments.rs  content.rs  dedupe.rs  examine.rs  extent.rs  main.rs  misc.rs  output.rs  scan.rs  serde_types.in.rs  serde_types.rs  storage.rs  types.rs
src/commands/: dedupe_command.rs  mod.rs  print_extents_command.rs
src/database/: file_data.rs  file_database.rs  file_database_builder.rs  mod.rs  recursive_path.rs  serde_types.in.rs
src/misc/: io.rs  mod.rs  stderr.rs
src/operations/: content_hasher.rs  directory_scanner.rs  extent_hasher.rs  file_deduper.rs  mod.rs
