[package]
name = "btrfs-dedupe"
version = "1.0.2"
description = "BTRFS whole-file deduplication tool"
license = "MIT"
homepage = "http://btrfs-dedupe.com"
repository = "https://gitlab.wellbehavedsoftware.com/well-behaved-software/wbs-backup/tree/master/btrfs-dedupe"

authors = [
	"James Pharaoh <james@pharaoh.uk>",
]

include = [
	"Cargo.toml",
	"LICENSE",
	"README.md",
	"src/**/*",
]

[dependencies]
btrfs = "1.0"
clap = "2.18"
sha2 = "0.2"
termion = "1.1"
