[package]

name = "btrfs-dedupe"
version = "1.0.2"
description = "BTRFS whole-file deduplication tool"
license = "MIT"
homepage = "http://btrfs-dedupe.com"
repository = "https://gitlab.wellbehavedsoftware.com/well-behaved-software/wbs-backup/tree/master/btrfs-dedupe"

authors = [
	"James Pharaoh <james@pharaoh.uk>",
]

include = [
	"Cargo.toml",
	"LICENSE",
	"README.md",
	"src/**/*",
]

build = "build.rs"

[build-dependencies]

serde_codegen = "0.8"

[dependencies]

btrfs = "1.0"
clap = "2.18"
output = "0.1"
rustc-serialize = "0.3"
serde = "0.8"
serde_json = "0.8"
sha2 = "0.2"
time = "0.1"

# ex: noet ts=4 filetype=toml
